2006-09-05  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* client.c: 
	Fixed a double memory release error, occuring when a CIMStatus trailer
	is sent back by the server.

2006-08-22  dhowell1

	* cimXmlParser.c, cimXmlParser.h, cimXmlResp.y, client.c, cmcimacs.h,
        * datetime.c, enumeration.c, instance.c, Makefile.am, objectpath.c,
        * value.c,
	* libcmpisfcc.Versions, libsfcUtil.Versions, libcimcClient.Versions

        Merged Intel changes with 08/17/06 CVS tip.

2006-07-17	sschuetz

	* hashtable.c, utilFactory.c, utilHashtable.c, utilStringbuffer.c:
	Moved to sfcUtil, build as shared library now

2006-07-06 sschuetz

	* constclass.c:
	Bug 1518169: Fixed memory leak in constclass.c

2006-06-28  sschuetz

	* client.c:
	Bug 1513362: Added setting of status code in function cmciConnect2,
	checking for NULL in CMSetStatus macros
		
2006-06-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* cimXmlResp.y: 
	Bug 1513278: Segfault in property qualifier processing.
	Fixed erroneous action in the array property production.
	Added missing setClassQualifiers function.
	Removed a few shift/reduce conflicts.

	* client.c:
	Removed the inline qualifier for callback functions.

	* TEST/Makefile.am, TEST/test_qualifiers2.c:
	Added test code for class qualifiers.

2006-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* client.c: 
	Bug 1439103: Added code to evaluate trailer headers for chunked transfers

2005-11-20  bestorga-oss

	* COPYING, args.c, array.c, cimXmlParser.c, cimXmlParser.h,
	cimXmlResp.y, client.c, cmci.h, cmcidt.h, cmcift.h, cmcimacs.h,
	constClass.c, datetime.c, enumeration.c, genericlist.c,
	genericlist.h, instance.c, native.h, objectpath.c, property.c,
	qualifier.c, string.c, utilList.h, utilStringBuffer.c,
	utilStringBuffer.h, value.c, TEST/show.c, TEST/test.c,
	TEST/test_an.c, TEST/test_an_2.c, TEST/test_as.c, TEST/test_as_2.c,