@@ -211,7 +211,7 @@ static size_t writeHeaders(void *ptr, size_t size,
 
 /* --------------------------------------------------------------------------*/
 
-static inline size_t writeCb(void *ptr, size_t size,
+static size_t writeCb(void *ptr, size_t size,
 					size_t nmemb, void *stream)
 {
     UtilStringBuffer *sb=(UtilStringBuffer*)stream;
